# ibus-qt

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile.in  INSTALL  TODO  ibus-qt.spec.in
cmake/: FindICU.cmake
debian/: changelog  clean  control  copyright  ibus-qt4.install  libibus-qt-dev.install  libibus-qt1.install  rules  watch
debian/patches/: binutils-gold
docs/: .gitignore  CMakeLists.txt  Doxyfile.in
qtim/: CMakeLists.txt  ibus-compose-data.h  ibus-input-context.cpp  ibus-input-context.h  ibus-plugin.cpp  ibus.cpp  ibuskeyuni.cpp
rpm/: .gitignore  ibus-qt.spec
src/: '  .gitignore  CMakeLists.txt  ibus-qt  ibus.cpp  log  org.freedesktop.DBus.xml  org.freedesktop.IBus.InputContext.xml  org.freedesktop.IBus.xml  qibus.h  qibusattribute.cpp  qibusattribute.h  qibusattrlist.cpp  qibusattrlist.h  qibusbus.cpp  qibusbus.h  qibuscomponent.cpp  qibuscomponent.h  qibusconfig.cpp  qibusconfig.h  qibusconfigadaptor.cpp  qibusconfigadaptor.h  qibusconfigproxy.cpp  qibusconfigproxy.h  qibusconfigservice.cpp  qibusconfigservice.h  qibusconnection.cpp  qibusconnection.h  qibusdbus_adaptor.cpp  qibusdbus_adaptor.h  qibusdbusadaptor.cpp  qibusdbusadaptor.h  qibusdbusproxy.cpp  qibusdbusproxy.h  qibusengine.cpp  qibusengine.h  qibusengineadaptor.cpp  qibusengineadaptor.h  qibusenginedesc.cpp  qibusenginedesc.h  (+32 more)
src/interfaces/: introspect_config.py  introspect_engine.py  introspect_factory.py  introspect_ibus.py  introspect_panel.py  org.freedesktop.IBus.Config.xml  org.freedesktop.IBus.Engine.xml  org.freedesktop.IBus.EngineFactory.xml  org.freedesktop.IBus.InputContext.xml  org.freedesktop.IBus.Panel.xml  xml2cpp.sh
src/xml/: introspect_dbus.py  introspect_ibus.py  introspect_inputcontext.py  org.freedesktop.IBus.xml
test/: .gitignore  CMakeLists.txt  main.cpp  qibusdemoengine.cpp  qibusdemoengine.h
